@@ -736,7 +736,7 @@ under the License.
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>findbugs-maven-plugin</artifactId>
-          <version>2.5.2</version>
+          <version>3.0.0</version>
           <configuration>
             <xmlOutput>true</xmlOutput>
             <findbugsXmlOutput>false</findbugsXmlOutput>
@@ -891,7 +891,7 @@ under the License.
           <plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>findbugs-maven-plugin</artifactId>
-              <version>2.5.1</version>
+              <version>3.0.0</version>
           </plugin>
     </plugins>
   </reporting>
